--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <div id="code-editor"></div>
   </body>
 </html>
