--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/sparrowicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Svelte + TS</title>
+    <title>Sparrow App</title>
 
     <link rel="stylesheet" href="./src/styles.css" />
     <link
