--- a/index.html
+++ b/index.html
@@ -13,10 +13,20 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
   </head>
-
+  <style>
+    #app{
+      position: fixed;
+      top: 0;
+      left:0;
+      right: 0;
+      bottom:0;
+      overflow: auto;
+    }
+  </style>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <div id="code-editor"></div>
   </body>
 </html>
+
