feat: add style on collaps/expand button and make responsive for all devices [SP-77]

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     />
   </head>
   <style>
-    #app{
+    #app {
       position: fixed;
       top: 0;
-      left:0;
+      left: 0;
       right: 0;
-      bottom:0;
-      overflow: auto;
+      bottom: 0;
+      overflow: hidden;
     }
   </style>
   <body>
@@ -29,4 +29,3 @@
     <div id="code-editor"></div>
   </body>
 </html>
-
