fix: rxdb class initialization[]

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </style>
   <body>
     <div id="app"></div>
+    <script type="module" src="/src/db.ts"></script>
     <script type="module" src="/src/main.ts"></script>
     <div id="code-editor"></div>
   </body>
