--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/sparrowicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/lib/assets/sparrow-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sparrow App</title>
