--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/lib/assets/sparrow-favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/lib/assets/sparrow-favicon.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Sparrow App</title>
 
-    <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="stylesheet" href="./src/packages/@app/components/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
