fix: merge development into web app

--- a/apps/@desktop/index.html
+++ b/apps/@desktop/index.html
@@ -11,7 +11,7 @@
 
     <title>Sparrow App</title>
 
-    <link rel="stylesheet" href="./src/packages/@app/components/styles.css" />
+    <link rel="stylesheet" href="./src/components/styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
