fix: fixed font style in sparrow web loading [#2103]

--- a/apps/@sparrow-web/index.html
+++ b/apps/@sparrow-web/index.html
@@ -16,6 +16,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       /* Style for the loader */
       #init-loader {
@@ -46,6 +52,8 @@
           transform: rotate(360deg);
         }
       }
+
+    
     </style>
   </head>
   <body>
@@ -71,10 +79,7 @@
         <p
           style="
             margin: 0 8px;
-            font-family:
-              Times New Roman,
-              Times,
-              serif !important;
+            font-family: 'Roboto', sans-serif;
           "
         >
           Sparrow Web Loading...
